--- a/mvc_app/Web.config
+++ b/mvc_app/Web.config
@@ -12,6 +12,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
+	<customErrors mode="Off" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <runtime>
