--- a/mvc_app/mvc_app.csproj
+++ b/mvc_app/mvc_app.csproj
@@ -141,7 +141,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Compile Include="Models\Respository.cs" />
+    <Compile Include="Models\RepositoryModel.cs" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
