Moved token to web.config and all issues are retrieved. Now need to return issue values back to view

--- a/mvc_app/Web.config
+++ b/mvc_app/Web.config
@@ -9,6 +9,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<!--
+	<add key="GitHubUserOwner" value="miguelmoreno" />
+	<add key="GitHubUserAgent" value="-iH 'User-Agent: ' https://api.github.com/meta" />
+	<add key="GitHubRepository" value="shippable" />
+	-->
+	<add key="GitHubAccessToken" value="83321899475a41bdbac5dcf9ede573b836f6786f" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -53,4 +59,5 @@
 	<modules runAllManagedModulesForAllRequests="true">
 	</modules>
   </system.webServer>
+
 </configuration>
