Redirects working now. Polishing data

--- a/mvc_app/mvc_app.csproj
+++ b/mvc_app/mvc_app.csproj
@@ -166,7 +166,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Result\Result.cshtml" />
+    <Content Include="Views\Result\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
