--- a/mvc_app/Web.config
+++ b/mvc_app/Web.config
@@ -6,20 +6,17 @@
 <configuration>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
+    <add key="webpages:Enabled" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	<!--
-	<add key="GitHubUserOwner" value="miguelmoreno" />
-	<add key="GitHubUserAgent" value="-iH 'User-Agent: ' https://api.github.com/meta" />
-	<add key="GitHubRepository" value="shippable" />
-	-->
 	<add key="GitHubAccessToken" value="83321899475a41bdbac5dcf9ede573b836f6786f" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-	<customErrors mode="On" />
+	<customErrors mode="Off">
+	</customErrors>
     <httpRuntime targetFramework="4.6.1" />
+  
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
