Basic tests. more needed

--- a/mvc_app.Tests/App.config
+++ b/mvc_app.Tests/App.config
@@ -5,7 +5,9 @@
 -->
 <configuration>
     <appSettings>
-
+	  <add key="GitHubRepoOwner" value="miguelmoreno" />
+	  <add key="GitHubRepoName" value="shippable" />
+	  <add key="GitHubAccessToken" value="f626d11f40f645b70c4d7c9fc26dc11e5e077e69" />
     </appSettings>
 
     <connectionStrings>
