--- a/mvc_app/mvc_app.csproj
+++ b/mvc_app/mvc_app.csproj
@@ -142,6 +142,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Compile Include="Models\RepositoryModel.cs" />
+    <None Include="Properties\PublishProfiles\OctoKitGitHubClient - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
